gen/SmallParser.java
// Generated from /home/facaslo/Documents/UN material/Programming Languages/Traductor-SmallBasic-React/grammar/Small.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SmallParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, LINE_COMMENT=2, ELSEIF=3, ENDIF=4, ENDWHILE=5, ENDFOR=6, ENDSUB=7, 
		GOTO=8, IF=9, THEN=10, ELSE=11, WHILE=12, FOR=13, SUB=14, TO=15, STEP=16, 
		TRUE=17, FALSE=18, TEXT_WINDOW=19, STACK=20, PROGRAM=21, ARRAY=22, OR=23, 
		AND=24, COLON=25, MINUS=26, PLUS=27, TIMES=28, DIV=29, COMMA=30, PERIOD=31, 
		LESS=32, GREATER=33, EQUALS=34, LEQ=35, GEQ=36, DIFF=37, LEFT_BRAC=38, 
		RIGHT_BRAC=39, LEFT_PAREN=40, RIGHT_PAREN=41, STR=42, NUM=43, ID=44;
	public static final int
		RULE_p = 0, RULE_su = 1, RULE_susl = 2, RULE_s = 3, RULE_id = 4, RULE_id1 = 5, 
		RULE_va = 6, RULE_va_op_dim = 7, RULE_c = 8, RULE_c1 = 9, RULE_csl = 10, 
		RULE_f = 11, RULE_st = 12, RULE_st1 = 13, RULE_fsl = 14, RULE_w = 15, 
		RULE_wsl = 16, RULE_bf = 17, RULE_pam = 18, RULE_pal = 19, RULE_pal1 = 20, 
		RULE_pa = 21, RULE_rw = 22, RULE_ex = 23, RULE_ex1 = 24, RULE_eb = 25, 
		RULE_eb1 = 26, RULE_er = 27, RULE_er1 = 28, RULE_ro = 29, RULE_es = 30, 
		RULE_es1 = 31, RULE_so = 32, RULE_em = 33, RULE_em1 = 34, RULE_mo = 35, 
		RULE_d = 36, RULE_id_op_dim = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"p", "su", "susl", "s", "id", "id1", "va", "va_op_dim", "c", "c1", "csl", 
			"f", "st", "st1", "fsl", "w", "wsl", "bf", "pam", "pal", "pal1", "pa", 
			"rw", "ex", "ex1", "eb", "eb1", "er", "er1", "ro", "es", "es1", "so", 
			"em", "em1", "mo", "d", "id_op_dim"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'ElseIf'", "'EndIf'", "'EndWhile'", "'EndFor'", "'EndSub'", 
			"'Goto'", "'If'", "'Then'", "'Else'", "'While'", "'For'", "'Sub'", "'To'", 
			"'Step'", "'True'", "'False'", "'TextWindow'", "'Stack'", "'Program'", 
			"'Array'", "'Or'", "'And'", "':'", "'-'", "'+'", "'*'", "'/'", "','", 
			"'.'", "'<'", "'>'", "'='", "'<='", "'>='", "'<>'", "'['", "']'", "'('", 
			"')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "LINE_COMMENT", "ELSEIF", "ENDIF", "ENDWHILE", "ENDFOR", 
			"ENDSUB", "GOTO", "IF", "THEN", "ELSE", "WHILE", "FOR", "SUB", "TO", 
			"STEP", "TRUE", "FALSE", "TEXT_WINDOW", "STACK", "PROGRAM", "ARRAY", 
			"OR", "AND", "COLON", "MINUS", "PLUS", "TIMES", "DIV", "COMMA", "PERIOD", 
			"LESS", "GREATER", "EQUALS", "LEQ", "GEQ", "DIFF", "LEFT_BRAC", "RIGHT_BRAC", 
			"LEFT_PAREN", "RIGHT_PAREN", "STR", "NUM", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Small.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SmallParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PContext extends ParserRuleContext {
		public SuContext su() {
			return getRuleContext(SuContext.class,0);
		}
		public PContext p() {
			return getRuleContext(PContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SmallParser.EOF, 0); }
		public SContext s() {
			return getRuleContext(SContext.class,0);
		}
		public PContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).enterP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).exitP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallVisitor ) return ((SmallVisitor<? extends T>)visitor).visitP(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PContext p() throws RecognitionException {
		PContext _localctx = new PContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_p);
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SUB:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				su();
				setState(77);
				p();
				setState(78);
				match(EOF);
				}
				break;
			case GOTO:
			case IF:
			case WHILE:
			case FOR:
			case TEXT_WINDOW:
			case STACK:
			case PROGRAM:
			case ARRAY:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				s();
				setState(81);
				p();
				setState(82);
				match(EOF);
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SuContext extends ParserRuleContext {
		public TerminalNode SUB() { return getToken(SmallParser.SUB, 0); }
		public TerminalNode ID() { return getToken(SmallParser.ID, 0); }
		public SuslContext susl() {
			return getRuleContext(SuslContext.class,0);
		}
		public TerminalNode ENDSUB() { return getToken(SmallParser.ENDSUB, 0); }
		public SuContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_su; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).enterSu(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).exitSu(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallVisitor ) return ((SmallVisitor<? extends T>)visitor).visitSu(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SuContext su() throws RecognitionException {
		SuContext _localctx = new SuContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_su);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(SUB);
			setState(88);
			match(ID);
			setState(89);
			susl();
			setState(90);
			match(ENDSUB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SuslContext extends ParserRuleContext {
		public SContext s() {
			return getRuleContext(SContext.class,0);
		}
		public SuslContext susl() {
			return getRuleContext(SuslContext.class,0);
		}
		public SuslContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_susl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).enterSusl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).exitSusl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallVisitor ) return ((SmallVisitor<? extends T>)visitor).visitSusl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SuslContext susl() throws RecognitionException {
		SuslContext _localctx = new SuslContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_susl);
		try {
			setState(96);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case GOTO:
			case IF:
			case WHILE:
			case FOR:
			case TEXT_WINDOW:
			case STACK:
			case PROGRAM:
			case ARRAY:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				s();
				setState(93);
				susl();
				}
				break;
			case ENDSUB:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SContext extends ParserRuleContext {
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public FContext f() {
			return getRuleContext(FContext.class,0);
		}
		public WContext w() {
			return getRuleContext(WContext.class,0);
		}
		public BfContext bf() {
			return getRuleContext(BfContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode GOTO() { return getToken(SmallParser.GOTO, 0); }
		public TerminalNode ID() { return getToken(SmallParser.ID, 0); }
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).exitS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallVisitor ) return ((SmallVisitor<? extends T>)visitor).visitS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_s);
		try {
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				c();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				f();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 3);
				{
				setState(100);
				w();
				}
				break;
			case TEXT_WINDOW:
			case STACK:
			case PROGRAM:
			case ARRAY:
				enterOuterAlt(_localctx, 4);
				{
				setState(101);
				bf();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 5);
				{
				setState(102);
				id();
				}
				break;
			case GOTO:
				enterOuterAlt(_localctx, 6);
				{
				setState(103);
				match(GOTO);
				setState(104);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SmallParser.ID, 0); }
		public Id1Context id1() {
			return getRuleContext(Id1Context.class,0);
		}
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).exitId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallVisitor ) return ((SmallVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(ID);
			setState(108);
			id1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Id1Context extends ParserRuleContext {
		public VaContext va() {
			return getRuleContext(VaContext.class,0);
		}
		public TerminalNode COLON() { return getToken(SmallParser.COLON, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(SmallParser.LEFT_PAREN, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(SmallParser.RIGHT_PAREN, 0); }
		public Id1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).enterId1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).exitId1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallVisitor ) return ((SmallVisitor<? extends T>)visitor).visitId1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Id1Context id1() throws RecognitionException {
		Id1Context _localctx = new Id1Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_id1);
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EQUALS:
			case LEFT_BRAC:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				va();
				}
				break;
			case COLON:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				match(COLON);
				}
				break;
			case LEFT_PAREN:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				match(LEFT_PAREN);
				setState(113);
				match(RIGHT_PAREN);
				}
				break;
			case EOF:
			case ELSEIF:
			case ENDIF:
			case ENDWHILE:
			case ENDFOR:
			case ENDSUB:
			case GOTO:
			case IF:
			case ELSE:
			case WHILE:
			case FOR:
			case SUB:
			case TEXT_WINDOW:
			case STACK:
			case PROGRAM:
			case ARRAY:
			case ID:
				enterOuterAlt(_localctx, 4);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VaContext extends ParserRuleContext {
		public Va_op_dimContext va_op_dim() {
			return getRuleContext(Va_op_dimContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(SmallParser.EQUALS, 0); }
		public ExContext ex() {
			return getRuleContext(ExContext.class,0);
		}
		public VaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_va; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).enterVa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).exitVa(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallVisitor ) return ((SmallVisitor<? extends T>)visitor).visitVa(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VaContext va() throws RecognitionException {
		VaContext _localctx = new VaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_va);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			va_op_dim();
			setState(118);
			match(EQUALS);
			setState(119);
			ex();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Va_op_dimContext extends ParserRuleContext {
		public TerminalNode LEFT_BRAC() { return getToken(SmallParser.LEFT_BRAC, 0); }
		public ExContext ex() {
			return getRuleContext(ExContext.class,0);
		}
		public TerminalNode RIGHT_BRAC() { return getToken(SmallParser.RIGHT_BRAC, 0); }
		public Va_op_dimContext va_op_dim() {
			return getRuleContext(Va_op_dimContext.class,0);
		}
		public Va_op_dimContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_va_op_dim; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).enterVa_op_dim(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).exitVa_op_dim(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallVisitor ) return ((SmallVisitor<? extends T>)visitor).visitVa_op_dim(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Va_op_dimContext va_op_dim() throws RecognitionException {
		Va_op_dimContext _localctx = new Va_op_dimContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_va_op_dim);
		try {
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEFT_BRAC:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				match(LEFT_BRAC);
				setState(122);
				ex();
				setState(123);
				match(RIGHT_BRAC);
				setState(124);
				va_op_dim();
				}
				break;
			case EQUALS:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(SmallParser.IF, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(SmallParser.LEFT_PAREN, 0); }
		public ExContext ex() {
			return getRuleContext(ExContext.class,0);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(SmallParser.RIGHT_PAREN, 0); }
		public TerminalNode THEN() { return getToken(SmallParser.THEN, 0); }
		public CslContext csl() {
			return getRuleContext(CslContext.class,0);
		}
		public C1Context c1() {
			return getRuleContext(C1Context.class,0);
		}
		public CContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).enterC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).exitC(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallVisitor ) return ((SmallVisitor<? extends T>)visitor).visitC(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CContext c() throws RecognitionException {
		CContext _localctx = new CContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_c);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(IF);
			setState(130);
			match(LEFT_PAREN);
			setState(131);
			ex();
			setState(132);
			match(RIGHT_PAREN);
			setState(133);
			match(THEN);
			setState(134);
			csl();
			setState(135);
			c1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class C1Context extends ParserRuleContext {
		public TerminalNode ENDIF() { return getToken(SmallParser.ENDIF, 0); }
		public TerminalNode ELSEIF() { return getToken(SmallParser.ELSEIF, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(SmallParser.LEFT_PAREN, 0); }
		public ExContext ex() {
			return getRuleContext(ExContext.class,0);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(SmallParser.RIGHT_PAREN, 0); }
		public TerminalNode THEN() { return getToken(SmallParser.THEN, 0); }
		public CslContext csl() {
			return getRuleContext(CslContext.class,0);
		}
		public C1Context c1() {
			return getRuleContext(C1Context.class,0);
		}
		public TerminalNode ELSE() { return getToken(SmallParser.ELSE, 0); }
		public C1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).enterC1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).exitC1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallVisitor ) return ((SmallVisitor<? extends T>)visitor).visitC1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final C1Context c1() throws RecognitionException {
		C1Context _localctx = new C1Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_c1);
		try {
			setState(150);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ENDIF:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				match(ENDIF);
				}
				break;
			case ELSEIF:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				match(ELSEIF);
				setState(139);
				match(LEFT_PAREN);
				setState(140);
				ex();
				setState(141);
				match(RIGHT_PAREN);
				setState(142);
				match(THEN);
				setState(143);
				csl();
				setState(144);
				c1();
				}
				break;
			case ELSE:
				enterOuterAlt(_localctx, 3);
				{
				setState(146);
				match(ELSE);
				setState(147);
				csl();
				setState(148);
				match(ENDIF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CslContext extends ParserRuleContext {
		public SContext s() {
			return getRuleContext(SContext.class,0);
		}
		public CslContext csl() {
			return getRuleContext(CslContext.class,0);
		}
		public CslContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_csl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).enterCsl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).exitCsl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallVisitor ) return ((SmallVisitor<? extends T>)visitor).visitCsl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CslContext csl() throws RecognitionException {
		CslContext _localctx = new CslContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_csl);
		try {
			setState(156);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case GOTO:
			case IF:
			case WHILE:
			case FOR:
			case TEXT_WINDOW:
			case STACK:
			case PROGRAM:
			case ARRAY:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				s();
				setState(153);
				csl();
				}
				break;
			case ELSEIF:
			case ENDIF:
			case ELSE:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(SmallParser.FOR, 0); }
		public TerminalNode ID() { return getToken(SmallParser.ID, 0); }
		public VaContext va() {
			return getRuleContext(VaContext.class,0);
		}
		public TerminalNode TO() { return getToken(SmallParser.TO, 0); }
		public ExContext ex() {
			return getRuleContext(ExContext.class,0);
		}
		public StContext st() {
			return getRuleContext(StContext.class,0);
		}
		public FslContext fsl() {
			return getRuleContext(FslContext.class,0);
		}
		public TerminalNode ENDFOR() { return getToken(SmallParser.ENDFOR, 0); }
		public FContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).enterF(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallListener ) ((SmallListener)listener).exitF(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallVisitor ) return ((SmallVisitor<? extends T>)visitor).visitF(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FContext f() throws RecognitionException {
		FContext _localctx = new FContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_f);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(FOR);
			setState(159);
			match(ID);
			setState(160);
			va();
			setState(161);
			match(TO);
			setState(162);
			ex();
			setState(163);
			st();
			setState(164);
			fsl();
			setState(165);
			match(ENDFOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
